# morse

./: CHANGELOG.md  LICENSE  SPEC  cabal.project  flake.nix  morse.cabal
app/: Morse.hs
client/: comic.js  node-packages.nix  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: Comic.ts  WebpackMorsePlugin.ts  custom.d.ts  index.ejs  index.ts  morse.ts  morseIndex.ts
content/: Confusion.rsp  General.tbl  Local.tbl  SayYes.tbl
src/Morse/: API.hs  Encoding.hs  Live.hs  Slack.hs  Types.hs  Web.hs
test/: Main.hs
