cabal-version:      2.4
name:               morse
version:            0
synopsis:           Morse!

-- A longer description of the package.
-- description:
homepage:           https://oss.xkcd.com

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             davean
maintainer:         oss@xkcd.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common deps
  default-language: Haskell2010
  build-depends:
     aeson ^>= 1.5
   , base >= 4.8 && < 4.15
   , bytes ^>= 0.17
   , bytestring ^>= 0.10
   , case-insensitive ^>= 1.2
   , cassava ^>= 0.5
   , containers ^>= 0.6
   , delay ^>= 0
   , directory ^>= 1.3
   , filepath ^>= 1.4
   , http-media ^>= 0.8
   , hyperloglog ^>= 0.4
   , http-client ^>= 0.7
   , http-client-tls ^>= 0.3.5.3
   , http-types ^>= 0.12
   , mtl ^>= 2.2
   , psqueues ^>= 0.2
   , random-fu ^>= 0.2
   , random-source ^>= 0.3
   , servant-server ^>= 0.18
   , stm ^>= 2.5
   , text ^>= 1.2
   , uuid ^>= 1.3
   , vector ^>= 0.12
   , wai ^>= 3.2

library
    import: deps
    hs-source-dirs:   src
    exposed-modules:
      Morse.API
      Morse.Encoding
      Morse.Live
      Morse.Types
      Morse.Web
      Morse.Slack

executable morse
    import: deps
    hs-source-dirs:   app
    main-is:          Morse.hs
    ghc-options: -O2 -rtsopts -threaded
    build-depends:
        morse
      , warp ^>= 3.3

test-suite morse-test
    import: deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        hedgehog
      , morse
      , tasty
      , tasty-hunit
      , tasty-test-vector
